refactor: move ai prompt to handler